2005-09-27  Per Bothner  <per@bothner.com>

	* kawa.texi: Minor updates.
	(Threads): Document new 'runnable' function.

2005-09-26  Per Bothner  <per@bothner.com>

	* texinfo.tex: Update to new version.

2005-08-22  Dominique Boucher  <dominique.boucher@nuecho.com>

	* kawa.texi (Projects): Mention Nu Echo and Schemeway.

2005-08-22  Per Bothner  <per@bothner.com>

	* kawa.texi: Don't specify @bullet when its the default for @itemize.
	This lets use emit the default in the generated docbook.

2005-08-14  Per Bothner  <per@bothner.com>

	* kawa.texi: Change top-level titles.
	Merge a bunch up top-level chapters together.

2005-08-10  Per Bothner  <per@bothner.com>

	* kawa.texi: Various terser chapter/section titles.
	(Top): Some front page improvements and reorganization.
	(KRL): Merged into the XML/HTML node.
	(Allocating objects): Move after Method operations.
	Mentioned prefix:new syntax.
	(Field operations): Document prefix:.class syntax,

2005-08-08  Per Bothner  <per@bothner.com>

	* kawa.texi (node): Subdivide into subsections.
	New material on setting variables.
	Document out:base, out:radix, out:doctype-systemm, out:doctype-public,
	out:xml-indent, out:line-length, out:right-margin options.
	(Record types): define-record-type constructors are now optimized.
	(Method operations): Document namespace-colon syntax extensions.
	(Field operations): Likewise.

2005-07-31  Per Bothner  <per@bothner.com>

	* kawa.texi (Restrictions): Merged node into Features chapter.
	(Features): Rename and move to where Restrictions used to be.

	* kawa.texi: Remove references to JavaSoft.

2005-07-30  Per Bothner  <per@bothner.com>

	* kawa.texi (Top): Thank Merced in addition to Brainfood.

	* kawa.texi (Procedures): Replace $* (line-break) commands by new 
	paragraphs, since DocBook doesn't handle internals line-breaks.

	* kawa.texi (Ports): Document *print-base*, *print-radix*,
	*print-right-margin*, *print-miser-width*.

	* kawa.texi (License): Add sub-node structure.
