@@ -1,33 +1,33 @@
-.TH KAWA 1
+.TH QEXO 1
 .\" NAME should be all caps, SECTION should be 1-8, maybe w/ subsection
 .\" other parms are allowed: see man(7), man(1)
 .SH NAME
-kawa \- Scheme language implemented using on a Java VM
+qexo \- the XQuery language implemented on a Java VM
 .SH SYNOPSIS
-.B kawa
+.B qexo
 .I "[options]"
 .br
-.B java kawa.repl
+.B java kawa.repl --xquery
 .I "[options]"
 .SH "DESCRIPTION"
 This manual page documents briefly the
-.BR kawa
-package, a Scheme dialect written completely in the Java language.
-Scheme forms are compiled into Java bytecodes for efficiency.
+.BR qexo
+package, an XQuery implementation written completely in the Java language.
+XQuery expressions are compiled into Java bytecodes for efficiency.
 
-Scheme is a high-level non-pure functional language in the Lisp family,
-with lexical scoping dynamically-types.
-The Kawa dialect of Scheme contains hooks to access and control Java objects.
+XQuery is a new language designed for querying, manipulating, and
+generating XML and similar data sets.
 
 Using the
-.B kawa
+.B qexo
 script is equivalent to invoking an interpreter of the Java language on the
 .B "kawa.repl"
-class.
+class and specifying the
+.B "--xquery"
+option.
 
 This manual page is just a quick synopsis.
-For more information, read the
-.BR kawa " manual - see below."
+For more information, see the links below.
 
 .SH OPTIONS
 .TP
@@ -43,7 +43,7 @@ but does not cause the start-up file
 to be read.
 .TP
 .BI "-f " filename
-Read and evaluate Scheme commands from the
+Read and evaluate XQuery expressions from the
 .IR filename .
 .TP
 .B -s
@@ -65,28 +65,42 @@ GNU
 
 .SH FILES
 .TP
-.B /usr/bin/kawa
+.B /usr/bin/qexo
 The
-.B kawa
-executable, which starts a
-.BR java
-interpreter.
+.B qexo
+executable just invokes
+.B kawa(1)
+with the
+.B --xquery
+option.
 .TP
 .B ~/.kawarc.scm
 Commands that are executed when
-.B kawa
-is started.
+.BR "qexo" " (or"
+.BR "kawa" ") is started."
 .SH AUTHOR
 Per Bothner <per@bothner.com>.
 .SH "SEE ALSO"
+.B kawa(1)
+.P
 .BR "info kawa" " - the complete Kawa manual."
 .P
+.UR "http://www.gnu.org/software/qxeo/"
+.I http://www.gnu.org/software/qxeo/
+.UE
+- the
+.B qexo
+home page.
+.P
 .UR "http://www.gnu.org/software/kawa/" 
-.IR "http://www.gnu.org/software/kawa/"
+.I "http://www.gnu.org/software/kawa/" 
 .UE
 - the
 .B kawa
-home page, based on the same Kawa manual.
+home page.
 .P
-.B qexo(1)
-- an implementation of XQuery using the same engine.
+.UR "htpp://www.w3.org/XML/Query""
+.I "htpp://www.w3.org/XML/Query"
+.UE
+- the W3C XQuery home page.
+
